<resources>
    <string name="app_name">ALC Challenge App - Folivi</string>
    <string name="welcome_to_alc">Welcome to ALC 4.0</string>
    <string name="button_about_alc">About ALC</string>
    <string name="button_profile">My Profile</string>
    <string name="action_settings">Settings</string>
    <string name="profile_name">Folivi Joshua</string>
    <string name="track">Track: Android</string>
    <string name="country">Country: Nigeria</string>
    <string name="email">Email: seunfolivi@gmail.com</string>
    <string name="phonenumber">Phone Number: 08084966076</string>
    <string name="slack_username">Slack Username: Folivi</string>
    <string name="image_text">folivi_profile_picture</string>
    <string name="label_activityC">My Profile</string>
    <string name="label_activityB">About ALC</string>
</resources>
